<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:camerakit="http://schemas.android.com/apk/res-auto"
    android:background="#000"
    tools:context="xtremedeveloper.allpurposenotes.login">
    <com.wonderkiln.camerakit.CameraView
        android:id="@+id/cam"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        camerakit:ckFacing="front"
        camerakit:ckFocus="tapWithMarker"
        camerakit:ckPinchToZoom="true"
        camerakit:ckMethod="speed"
        camerakit:ckJpegQuality="100"
        android:adjustViewBounds="true"
        android:focusable="true" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/click_pane">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/shutter"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/click"
            android:visibility="invisible"
            android:id="@+id/click"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/flash_off"
            android:layout_alignStart="@+id/click"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="45dp"
            android:layout_marginStart="-120dp"
            android:contentDescription="@string/flash"
            android:id="@+id/flash"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/camera_flip"
            android:layout_alignEnd="@+id/click"
            android:layout_alignParentBottom="true"
            android:padding="10dp"
            android:layout_marginBottom="47dp"
            android:layout_marginEnd="-112dp"
            android:contentDescription="@string/camera_flip"
            android:id="@+id/camera_flip"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:id="@+id/galary"
            android:background="#fff">
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/permission_camera"
        android:visibility="gone"
        android:background="#000">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/im_sad"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/i_m_sad"
                android:layout_marginTop="25dp"
                android:src="@drawable/sad"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/im_sad"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="#fff"
                android:text="@string/blind"
                android:id="@+id/permission_text"/>
            <Button
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_below="@+id/permission_text"
                android:layout_centerHorizontal="true"
                android:background="@drawable/allow"
                android:textColor="#fff"
                android:layout_marginTop="15dp"
                android:id="@+id/allow_camera"
                android:text="@string/allow_camera"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>