<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#000"
    tools:context="xtremedeveloper.allpurposenotes.login">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/parentPanel">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="0dp"
            app:cardCornerRadius="10dp">
            <com.sdsmdg.kd.trianglify.views.TrianglifyView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/backG"
                app:cellSize="100dp"
                app:variance="70dp"
                app:bleedX="100dp"
                app:bleedY="100dp"
                app:gridType="rectangle"
                app:fillStrokes="true"
                app:fillTriangle="true" />
        </android.support.v7.widget.CardView>
        <RelativeLayout
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:id="@+id/logo_div"
            android:visibility="gone"
            android:background="@drawable/logo_back"
            android:layout_centerInParent="true">
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/splash_cover"
            android:background="@drawable/round_app"
            android:layout_centerInParent="true">
        </RelativeLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ico_splash"
            android:layout_centerInParent="true"
            android:src="@mipmap/logo"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/login_div"
            android:background="@drawable/login_tittle"
            android:layout_alignParentBottom="true">
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="-2dp"
                android:textColor="#616161"
                android:backgroundTint="#fff"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="#c7c7c7"
                android:maxLines="1"
                android:paddingEnd="100dp"
                android:fontFamily="sans-serif"
                android:paddingStart="10dp"/>
            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_alignEnd="@+id/email"
                android:layout_marginEnd="10dp"
                android:visibility="gone"
                android:id="@+id/email_reset"
                android:background="@drawable/login_tittle">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="5dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/edit"
                    style="@style/SelectableItemBackgroundBorderless"
                    android:clickable="false"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:id="@+id/divider1"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_below="@+id/email"
                android:background="#616161"/>
            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/email"
                android:layout_marginStart="5dp"
                android:textColor="#616161"
                android:drawablePadding="10dp"
                android:backgroundTint="#fff"
                android:drawableStart="@drawable/password_nok"
                android:hint="@string/pass"
                android:visibility="gone"
                android:enabled="false"
                android:fontFamily="sans-serif"
                android:inputType="textPassword"
                android:textColorHint="#c7c7c7"
                android:maxLines="1"
                android:paddingEnd="100dp"
                android:paddingStart="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:id="@+id/divider2"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_below="@+id/pass"
                android:background="#616161"/>
            <EditText
                android:id="@+id/con_pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/pass"
                android:layout_marginStart="5dp"
                android:textColor="#616161"
                android:drawablePadding="10dp"
                android:backgroundTint="#fff"
                android:drawableStart="@drawable/con_password_nok"
                android:hint="@string/con_pass"
                android:visibility="gone"
                android:enabled="false"
                android:inputType="textPassword"
                android:textColorHint="#c7c7c7"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:paddingEnd="100dp"
                android:paddingStart="10dp"/>

            <EditText
                android:id="@+id/f_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="58dp"
                android:textColor="#616161"
                android:backgroundTint="#fff"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/user"
                android:hint="@string/fname"
                android:visibility="gone"
                android:inputType="textPersonName"
                android:textColorHint="#c7c7c7"
                android:maxLines="1"
                android:paddingEnd="20dp"
                android:fontFamily="sans-serif"
                android:paddingStart="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:id="@+id/divider3"
                android:visibility="gone"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_below="@+id/f_name"
                android:background="#616161"/>
            <EditText
                android:id="@+id/l_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/divider3"
                android:layout_marginStart="5dp"
                android:textColor="#616161"
                android:drawablePadding="10dp"
                android:backgroundTint="#fff"
                android:drawableStart="@drawable/user"
                android:hint="@string/lname"
                android:visibility="gone"
                android:inputType="textPersonName"
                android:textColorHint="#c7c7c7"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:paddingEnd="20dp"
                android:paddingStart="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:id="@+id/divider4"
                android:visibility="gone"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_below="@+id/l_name"
                android:background="#616161"/>
            <EditText
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/divider4"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="50dp"
                android:textColor="#616161"
                android:drawablePadding="10dp"
                android:backgroundTint="#fff"
                android:drawableStart="@drawable/dob"
                android:hint="@string/dob"
                android:visibility="gone"
                android:inputType="date"
                android:textColorHint="#c7c7c7"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/dob_chooser"
                android:padding="4dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/dob"
                style="@style/SelectableItemBackgroundBorderless"
                android:src="@drawable/calendar"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:id="@+id/divider5"
                android:visibility="gone"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_below="@+id/dob"
                android:background="#616161"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/divider5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:maxLines="2"
                    android:id="@+id/verify_l1"
                    android:textColor="#616161"
                    android:gravity="center"
                    android:visibility="invisible"
                    android:text="@string/verify1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:maxLines="2"
                    android:id="@+id/verify_l2"
                    android:textColor="#616161"
                    android:gravity="center"
                    android:visibility="invisible"
                    android:layout_below="@+id/verify_l1"
                    android:text=""/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:maxLines="2"
                    android:id="@+id/verify_l4"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center"
                    android:visibility="invisible"
                    android:layout_below="@+id/verify_l2"
                    android:text="@string/didnt_recieve"/>
            </RelativeLayout>

            <TextView
                android:layout_width="85dp"
                android:layout_height="30dp"
                android:id="@+id/signin"
                android:text="@string/next"
                android:textSize="11sp"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/signin"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="15dp"/>
            <ProgressBar
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:id="@+id/nextLoad"
                android:layout_alignEnd="@+id/signin"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="-4.5dp"
                android:visibility="gone"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="142dp"
                android:id="@+id/sign_dialog"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:clickable="true"
                android:background="@drawable/sign_dialog"
                android:visibility="gone">
                <ProgressBar
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentTop="true"
                android:id="@+id/gender"
                android:visibility="gone">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_alignParentTop="true"
                    android:elevation="2dp"
                    android:background="@drawable/ribbon"/>
                <android.support.v7.widget.CardView
                    android:layout_width="280dp"
                    android:layout_height="80dp"
                    app:cardBackgroundColor="@color/profile"
                    app:cardCornerRadius="30dp"
                    android:layout_marginTop="-40dp"
                    app:cardPreventCornerOverlap="false"
                    android:layout_centerHorizontal="true">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <RelativeLayout
                            android:layout_width="95dp"
                            android:layout_height="40dp"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentStart="true">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/gender_text"
                                android:layout_centerInParent="true"
                                android:textColor="#d3d3d3"
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:text="@string/he"/>
                        </RelativeLayout>
                        <ImageView
                            android:layout_width="110dp"
                            android:layout_height="40dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:paddingStart="45dp"
                            android:paddingEnd="35dp"
                            android:id="@+id/gender_swap"
                            android:src="@drawable/change"
                            style="@style/SelectableItemBackgroundBorderless"/>
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-5dp"
            android:id="@+id/forget_pass"
            android:layout_above="@+id/login_div"
            android:background="@drawable/login_tittle">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="12sp"
                android:maxLines="1"
                android:textColor="#616161"
                android:text="@string/forgot_pass"/>
        </RelativeLayout>
        <ProgressBar
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/dp_Loader"
            android:visibility="gone"
            android:layout_centerInParent="true"/>
        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:id="@+id/profile"
            android:src="@mipmap/boy"
            app:civ_border_color="@color/profile"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/login_div"
            android:layout_marginBottom="-55dp"
            app:civ_border_width="5dp"
            app:civ_shadow="true"
            android:visibility="gone"
            app:civ_shadow_radius="3"
            app:civ_shadow_color="#6c6c6c"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/camera_pane"
            android:background="#000"
            android:visibility="gone">
            <include layout="@layout/activity_camera"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
